# quantitative-finance-related

./: README.md
data/: market_data.pkl
models/: ppo_final_actor.weights.h5  ppo_final_critic.weights.h5
repo1-portfolio-optimization-dynamic-hedging-main/: requirements.txt
repo1-portfolio-optimization-dynamic-hedging-main/examples/: optuna_hpo.py
repo1-portfolio-optimization-dynamic-hedging-main/results/: dqn_evaluation.json  sac_evaluation.json  training_log.jsonl
repo1-portfolio-optimization-dynamic-hedging-main/src/: main.py
repo1-portfolio-optimization-dynamic-hedging-main/tests/: test_environment.py
repo2-credit-risk-modeling-multimodal/: README.md  requirements.txt  train.py
repo2-credit-risk-modeling-multimodal/config/: config.yaml
repo2-credit-risk-modeling-multimodal/models/: multimodal_model.py
repo2-credit-risk-modeling-multimodal/preprocessing/: data_processor.py
repo2-credit-risk-modeling-multimodal/utils/: helpers.py
repo2-credit-risk-modeling-multimodal/visualization/: visualizer.py
repo3-GNN-Financial-Graph/: README.md  main.py  requirements.txt
repo3-GNN-Financial-Graph/config/: config.yaml
repo3-GNN-Financial-Graph/data/: data_processor.py  financial_data.csv
repo3-GNN-Financial-Graph/models/: gnn_model.py
repo3-GNN-Financial-Graph/notebooks/: README.md
repo3-GNN-Financial-Graph/utils/: __init__.py  logger.py
repo3-GNN-Financial-Graph/visualization/: visualizer.py
repo4-high-frequency-betting-data-modeling-and-jump-detection/Final Submission/: Eventized Microstructure Modeling with Large Language Models.docx
repo4-high-frequency-betting-data-modeling-and-jump-detection/Frame-work/: Logic-Framework.md  Tech-Framework.md
repo4-high-frequency-betting-data-modeling-and-jump-detection/data/: generate_data.py
repo5-algo-trading-website/: DEMO_GUIDE.md  FINAL_STATUS.md  INSTRUMENTS_README.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  advanced_demo.js  config.example.js  config.js  demo_instruments.js  package-lock.json  package.json  server.js  start.sh  strategy-code-package.js  trading_strategies.py  visualization_demo.js
repo5-algo-trading-website/public/: app.js  index.html  instruments.html  styles.css
repo6-LSTM-Volatility-Prediction/: Dockerfile  README.md  environment.yml  main.py  requirements-lock.txt  requirements.txt
repo7-Options-Volatility-Trading/: WEB_README.md  complete_trading_demo.py  env.template  monitor_system.py  start_webapp.sh
repo8-Macro-Strategy-Live-Dashboard/: API_INFO.md  DEPLOYMENT_GUIDE.md  FILES_LIST.md  PROJECT_COMPLETION.md  PROJECT_OVERVIEW.md  README.md  demo.sh  index.html  package-lock.json  package.json  start.bat  start.sh  test.js
repo9-Live-Trading/: Trading-Product-Overview.md
repo9-Live-Trading/C++/: CMakeLists.txt  README.md  authentication.cpp  authentication.h  build.sh  config.json  example_usage.cpp  main.cpp
repo9-Live-Trading/C++/Algo-Trading/data-download/: historical_data.cpp  historical_data.h  websocket_client.cpp  websocket_client.h
repo9-Live-Trading/C++/Algo-Trading/execution/: order_executor.cpp  order_executor.h
repo9-Live-Trading/C++/Algo-Trading/performance/: performance_monitor.cpp  performance_monitor.h
repo9-Live-Trading/C++/Algo-Trading/strategy/: factor_strategy.cpp  factor_strategy.h
(+66 files in other folders)
